func(*): 完善分类功能